--- a/javascript/alura-midi/index.html
+++ b/javascript/alura-midi/index.html
@@ -34,15 +34,15 @@
         <button class="tecla tecla_tom">Tom</button>
     </section>
 
-    <audio src="sounds/keyq.wav" id="som_tecla_pom" class="pom"></audio>
-    <audio src="sounds/keyw.wav" id="som_tecla_clap" class="clap"></audio>
-    <audio src="sounds/keye.wav" id="som_tecla_tim" class="tim"></audio>
-    <audio src="sounds/keya.wav" id="som_tecla_puff" class="puff"></audio>
-    <audio src="sounds/keys.wav" id="som_tecla_splash "class="splash"></audio>
-    <audio src="sounds/keyd.wav" id="som_tecla_toim" class="toim"></audio>
-    <audio src="sounds/keyz.wav" id="som_tecla_psh" class="psh"></audio>
-    <audio src="sounds/keyx.wav" id="som_tecla_tic" class="tic"></audio>
-    <audio src="sounds/keyc.wav" id="som_tecla_tom" class="tom"></audio>
+    <audio src="sounds/keyq.wav" id="som_tecla_pom"></audio>
+    <audio src="sounds/keyw.wav" id="som_tecla_clap"></audio>
+    <audio src="sounds/keye.wav" id="som_tecla_tim"></audio>
+    <audio src="sounds/keya.wav" id="som_tecla_puff"></audio>
+    <audio src="sounds/keys.wav" id="som_tecla_splash"></audio>
+    <audio src="sounds/keyd.wav" id="som_tecla_toim"></audio>
+    <audio src="sounds/keyz.wav" id="som_tecla_psh"></audio>
+    <audio src="sounds/keyx.wav" id="som_tecla_tic"></audio>
+    <audio src="sounds/keyc.wav" id="som_tecla_tom"></audio>
 
     <script src="./main.js"></script>
 </body>
