--- a/javascript/alura-fone/index.html
+++ b/javascript/alura-fone/index.html
@@ -9,7 +9,7 @@
 <body>
   <h1> Alura Fone </h1>
 
-  <input type="tel" placeholder="Digite seu telefone">
+  <input type="tel" placeholder="Digite seu telefone" value="">
 
   <section class="teclado">
     <input type="button" value="1">
