--- a/javascript/numero-secreto/index.html
+++ b/javascript/numero-secreto/index.html
@@ -10,6 +10,7 @@
     <title>Número Secreto</title>
 </head>
 <body>
+    <P> Diga GAME OVER para encerrar ou JOGAR NOVAMENTE para recarregar</P>
     <h1>Acerte o número secreto</h1>
 
     <h3>O número secreto está entre <span id="menor-valor">0</span> e <span id="maior-valor">100</span></h3>
