--- a/javascript/alurabook/index.html
+++ b/javascript/alurabook/index.html
@@ -101,6 +101,8 @@
             <div class="formulario__campo">
                 <label class="campo__etiqueta" for="cep">CEP</label>
                 <input name="cep" id="cep" class="campo__escrita" required />
+                <div id="erro" class="formulario__erro erro__texto">
+                </div>
             </div>
 
             <div class="formulario__campo">
