--- a/javascript/alurabooks/index.html
+++ b/javascript/alurabooks/index.html
@@ -275,6 +275,7 @@
     <p>Alura - Mergulhe em tecnologia</p>
   </footer>
 
+  <script src="./app/aplica-desconto.js"></script>
   <script src="./app/exibe-livros.js"></script>
   <script src="./app/main.js"></script>
 </body>
