--- a/javascript/alurabooks/index.html
+++ b/javascript/alurabooks/index.html
@@ -275,9 +275,10 @@
     <p>Alura - Mergulhe em tecnologia</p>
   </footer>
 
+  <script src="./app/exibe-livros.js"></script>
   <script src="./app/filtra-por-categorias.js"></script>
   <script src="./app/aplica-desconto.js"></script>
-  <script src="./app/exibe-livros.js"></script>
+  <script src="./app/ordena-por-preco.js"></script>
   <script src="./app/main.js"></script>
 </body>
 
