--- a/jquery/alura-typer/public/principal.html
+++ b/jquery/alura-typer/public/principal.html
@@ -5,6 +5,7 @@
     <title>Alura Typer</title>
     <link rel="stylesheet" href="css/libs/materialize.min.css">
     <link rel="stylesheet" href="css/libs/google-fonts.css">
+    <link rel="stylesheet" href="css/libs/selectize.default.css">
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
@@ -45,6 +46,16 @@
                 <i class="material-icons">repeat_one</i>
             </a>
             <input type="number" min="0" id="frase-id">
+
+            <div class="select-usuarios">
+                <select id="usuarios">
+                    <option value="Maria">Maria</option>
+                    <option value="Douglas">Douglas</option>
+                    <option value="Flavio">Flavio</option>
+                    <option value="Nico">Nico</option>
+                </select>
+            </div>
+
             <a id="botao-sync" class="btn-floating btn-large waves-effect waves-light yellow">
                 <i class="material-icons">swap_vert</i>
             </a>
@@ -77,6 +88,7 @@
     <script src="js/main.js"></script>
     <script src="js/placar.js"></script>
     <script src="js/frases.js"></script>
+    <script src="js/selectize.js"></script>
 
 </body>
 </html>
