--- a/jquery/alura-typer/public/principal.html
+++ b/jquery/alura-typer/public/principal.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/libs/materialize.min.css">
     <link rel="stylesheet" href="css/libs/google-fonts.css">
     <link rel="stylesheet" href="css/libs/selectize.default.css">
+    <link rel="stylesheet" href="css/libs/tooltipster.bundle.min.css">
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
@@ -56,7 +57,7 @@
                 </select>
             </div>
 
-            <a id="botao-sync" class="btn-floating btn-large waves-effect waves-light yellow">
+            <a id="botao-sync" class="tooltip btn-floating btn-large waves-effect waves-light yellow" title="Sincronizado com sucesso!">
                 <i class="material-icons">swap_vert</i>
             </a>
         </div>
@@ -89,6 +90,7 @@
     <script src="js/placar.js"></script>
     <script src="js/frases.js"></script>
     <script src="js/selectize.js"></script>
+    <script src="js/tooltipster.bundle.min.js"></script>
 
 </body>
 </html>
